--- a/JAZLanguageMarkup/.classpath
+++ b/JAZLanguageMarkup/.classpath
@@ -3,9 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/jakarta-regexp-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/ecs-1.4.2.jar"/>
-	<classpathentry kind="src" path="/JAZKernel"/>
+	<classpathentry exported="true" kind="src" path="/JAZKernel"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/jdom.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/C:/Java/jdom1.1.1/jdom/apidocs/"/>
@@ -15,10 +14,5 @@
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/resolver.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xercesImpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xml-apis.jar"/>
-	<classpathentry kind="lib" path="/ZKernelFileZJar/JAZKernel_fat.jar" sourcepath="/JAZKernel">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/1fgl/workspace/Eclipse3FGL/ZKernelDocumentation/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
