--- a/JAZLanguageMarkup/.classpath
+++ b/JAZLanguageMarkup/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/ecs-1.4.2.jar"/>
 	<classpathentry exported="true" kind="src" path="/JAZKernel"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/jdom.jar">
@@ -14,5 +13,16 @@
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/resolver.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xercesImpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xml-apis.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0 - FGL">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.utility"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
