--- a/JAZLanguageMarkup/.classpath
+++ b/JAZLanguageMarkup/.classpath
@@ -14,14 +14,14 @@
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xercesImpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xml-apis.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0 - FGL">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.utility"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.4">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/ZKernelFileCollection/commons-codec-1.7/commons-codec-1.7.jar" sourcepath="/ZKernelFileCollection/commons-codec-1.7/commons-codec-1.7-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/ZKernelFileCollection/commons-codec-1.7/commons-codec-1.7-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
