Mache Debug-Main-Klasse: GetClientIPPageFromWeb wieder lauffähig
Signed-off-by: firak01 <firak01@t-online.de>

--- a/JAZLanguageMarkup/src/ZKernelConfigKernel.ini
+++ b/JAZLanguageMarkup/src/ZKernelConfigKernel.ini
@@ -10,6 +10,6 @@ KernelLogFile=ZKernelLog_default.txt
 #Modulkonfiguration: 
 ;1. Programm: Auslesen der externen IP-Adresse aus dem Router, generieren einer HTML-Seite, transportieren der HTML-Seite auf einen FTP-Server
 ;2. Programm: Auslesen der in die HTML-Seite geschriebenen Adresse aus dem Web
-KernelConfigPathIPPage=
+KernelConfigPathIPPage=<z:Null/>
 KernelConfigFileIPPage=ZKernelConfigIPPage_default.ini
 
