--- a/JAZLanguageMarkup/src/ZKernelConfigIPPage_default.ini
+++ b/JAZLanguageMarkup/src/ZKernelConfigIPPage_default.ini
@@ -1,23 +1,32 @@
 [FGL!01]
 ;Merke: Hier werden die Aliasnamen für die Konfiguration definiert.
 ;Merke in dem Aliasnamen darf kein Semikolon auftauchen, sonst wird der Eintrag ab dem Semikolon als Kommentar gesehen
+;Merke in dem Aliasnamen darf kein Unterstrick auftauchen, sonst wird der Teil hinter dem Unterstrick als Programname gesehen
 
 
 ###############################################
 #  Die verschiedenen Programme dieses Moduls  #
 ###############################################
 #Auslesen der IP-Adresse aus dem Router
-ProgIP=FGL!01_IP
+#ProgIP=FGL!01_IP
+#Merke: 20220916: Es gibt eine Reihenfolge in der nach den Sections gesucht wird. Die konkrete Angabe der Section ist also nicht mehr notwendig.
+ProgIP=IP
 
 #Erstellen der HTML-Seite
-ProgPage=FGL!01_Page
+#ProgPage=FGL!01_Page
+#Merke: 20220916: Es gibt eine Reihenfolge in der nach den Sections gesucht wird. Die konkrete Angabe der Section ist also nicht mehr notwendig.
+ProgPage=Page
 
 #Transferieren der HTML-Seite per ftp ins Web
-ProgFTP=FGL#01_FTP
+#ProgFTP=FGL#01_FTP
+#Merke: 20220916: Es gibt eine Reihenfolge in der nach den Sections gesucht wird. Die konkrete Angabe der Section ist also nicht mehr notwendig.
+ProgFTP=FTP
 
 #Neu: 20060623
 #Auslesen der Adresse aus dem Web
-ProgIPReader=FGL!01_IP_READER
+#ProgIPReader=FGL!01_IP-READER
+#Merke: 20220916: Es gibt eine Reihenfolge in der nach den Sections gesucht wird. Die konkrete Angabe der Section ist also nicht mehr notwendig.
+ProgIPReader=IP-READER
 
 
 
@@ -63,7 +72,7 @@ SourceFile=@Z([Config],"ProgPage","TargetFile")
 
 
 
-[FGL!01_IP_READER]
+[FGL!01_IP-READER]
 ;Auszulesende Web-Seite
 URL2Read=http://fgl.homepage.t-online.de/pagIPLinkFGL.html
 
