--- a/JAZLanguageMarkup/.classpath
+++ b/JAZLanguageMarkup/.classpath
@@ -8,7 +8,6 @@
 			<attribute name="javadoc_location" value="file:/C:/Java/jdom1.1.1/jdom/apidocs/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/nekohtml.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/resolver.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xercesImpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xml-apis.jar"/>
@@ -27,5 +26,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/ZKernelFileCollection/nekohtml-1.9.21/nekohtml.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
