--- a/JAZLanguageMarkup/.classpath
+++ b/JAZLanguageMarkup/.classpath
@@ -3,11 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry exported="true" kind="src" path="/JAZKernel"/>
-	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/jdom.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/Java/jdom1.1.1/jdom/apidocs/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/resolver.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xercesImpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xml-apis.jar"/>
@@ -27,5 +22,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/ZKernelFileCollection/nekohtml-1.9.21/nekohtml.jar"/>
+	<classpathentry kind="lib" path="/ZKernelFileCollection/jdom-1.1.3/jdom-1.1.3.jar" sourcepath="/ZKernelFileCollection/jdom-1.1.3/jdom-1.1.3-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/ZKernelFileCollection/jdom-1.1.3/jdom-1.1.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
