--- a/JAZLanguageMarkup/.classpath
+++ b/JAZLanguageMarkup/.classpath
@@ -4,8 +4,6 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry exported="true" kind="src" path="/JAZKernel"/>
 	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/resolver.jar"/>
-	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xercesImpl.jar"/>
-	<classpathentry exported="true" kind="lib" path="/ZKernelFileCollection/xml-apis.jar"/>
 	<classpathentry kind="lib" path="/ZKernelFileCollection/commons-codec-1.7/commons-codec-1.7.jar" sourcepath="/ZKernelFileCollection/commons-codec-1.7/commons-codec-1.7-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/ZKernelFileCollection/commons-codec-1.7/commons-codec-1.7-javadoc.jar!/"/>
@@ -21,10 +19,24 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/ZKernelFileCollection/nekohtml-1.9.21/nekohtml.jar"/>
+	<classpathentry kind="lib" path="/ZKernelFileCollection/nekohtml-1.9.21/nekohtml.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/ZKernelFileCollection/nekohtml-1.9.21/javadoc.zip!/javadoc"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/ZKernelFileCollection/jdom-1.1.3/jdom-1.1.3.jar" sourcepath="/ZKernelFileCollection/jdom-1.1.3/jdom-1.1.3-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/ZKernelFileCollection/jdom-1.1.3/jdom-1.1.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/ZKernelFileCollection/xerces-2_12_2/xercesImpl.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/ZKernelFileCollection/xerces-2_12_2/Xerces-J-bin.2.12.2.zip!/xerces-2_12_2/docs/javadocs/xerces2"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/ZKernelFileCollection/xerces-2_12_2/xml-apis.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/ZKernelFileCollection/xerces-2_12_2/Xerces-J-bin.2.12.2.zip!/xerces-2_12_2/docs/javadocs/api"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
