--- a/JAZLanguageMarkup/.classpath
+++ b/JAZLanguageMarkup/.classpath
@@ -30,15 +30,9 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/ZKernelFileCollection/jdom-1.1.3/jdom-1.1.3-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/ZKernelFileCollection/xerces-2_12_2/xercesImpl.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ZKernelFileCollection/xerces-2_12_2/Xerces-J-bin.2.12.2.zip!/xerces-2_12_2/docs/javadocs/xerces2"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/ZKernelFileCollection/xerces-2_12_2/xml-apis.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ZKernelFileCollection/xerces-2_12_2/Xerces-J-bin.2.12.2.zip!/xerces-2_12_2/docs/javadocs/api"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="/ZKernelFileCollection/xalan-j_2_7_1/xalan.jar"/>
+	<classpathentry kind="lib" path="/ZKernelFileCollection/xalan-j_2_7_1/serializer.jar"/>
+	<classpathentry kind="lib" path="/ZKernelFileCollection/xalan-j_2_7_1/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="/ZKernelFileCollection/xalan-j_2_7_1/xml-apis.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
