-Erstellen der Klassen und Interfaces um einen Job und seine Steps abzubilden. -Auslesen der Parameter aus der Ini für den Step -Umbenennung der KErnelmethoden für ArrayString Werte... damit treffender
Signed-off-by: firak01 <firak01@t-online.de>

--- a/JAZLanguageMarkup/tryout/ZKernelConfig_HtmlTableHandler.ini
+++ b/JAZLanguageMarkup/tryout/ZKernelConfig_HtmlTableHandler.ini
@@ -16,12 +16,9 @@ KernelLogPath=c:\fglKernel\KernelLog
 KernelLogFile=ZKernelLog_HtmlTableHandler.txt
 
 ######## Modulkonfiguration ##############
-;Konfiguration des Kernels als Modul. HtmlTableHandler, weist auf das gleiche File
+;Konfiguration des Kernels als Modul, hier: HtmlTableHandler. Merke, es verweist auf das gleiche File. Das muss aber bei anderen Modulen so nicht sein.
 KernelConfigPathHtmlTableHandler=<z:Null/>
 KernelConfigFileHtmlTableHandler=ZKernelConfig_HtmlTableHandler.ini
-
-
-
 
 ;TODOGOON 20210203: Hier verkürzt auch einen Aliaswerte anbieten für den Modulnamen
 ;Beispiel für Modulnamen:
@@ -54,6 +51,10 @@ ProgIPReader=HtmlTableHandler!01_IP-READER
 #Merke in dem Aliasnamen darf kein Semikolon auftauchen, sonst wird der Eintrag ab dem Semikolon als Kommentar gesehen
 #Merke in dem Aliasnamen darf kein Unterstrich auftauchen, sonst wird der Teil hinter dem Unterstrick als Programname gesehen
 
+#Aliasname des JobSteps (statt Klassenname) = Section in der Ini-Datei
+HtmlTableWriterStep=HtmlTableWriter
+
+
 ;Beispiele für Programkonfiguration
 ;Das Panel selbst, zum Vorbelegen der Werte...
 ;use.openvpn.clientui.component.IPExternalRead.PanelDlgIPExternalContentOVPN=IP-ClientContext
@@ -70,6 +71,7 @@ ProgIPReader=HtmlTableHandler!01_IP-READER
 # Merke:
 # Jeder Test ist als eigenes Programm definiert. D.h. Er hat in dieser Datei eine eigene Section.
 # Das ist ein feststehender Name, der verwendet werden muss, wenn der Context aus dieser Configuration geholt werden soll.
+# ...
 
 
 [HtmlTableHandler!01_IP-READER]
@@ -87,6 +89,16 @@ URL2Read=<Z>[IP-ClientContext]URL2Read</Z>
 
 ;Hier als relativer Pfad eine gueltige URL...
 ;URL2Read=.\pagIPLinkFGL4DebugOnHANNIBALDEV04VM_local.html
+
+[HtmlTableWriter];Section mit Daten für den Writer Step
+InputDirectoryPath=use\zKernel\html\step01\writer
+InputFileNameXml=TableDataInput4Debug4XsdCreation.xml
+InputFileNameXsl=pagHtmlTableTagGenerated4Debug.xsl
+
+OutputDirectoryPath=use\zKernel\html\step01\writer
+
+# Map: HeaderId = Label
+TableHeaderMap=<Z><JSON><JSON:MAP>{"IPNr":"IP-Adresse","Servername":"Name des Servers","IPPortListen":"Port für Listener","IPPortConnect":"Port für Verbindung","IPDate":"Datum","IPTime":"Zeit"}</JSON:MAP></JSON></Z>
 
 #############################################################
 ### Fuer andere Systemnummmern, hier 02:
@@ -110,6 +122,9 @@ KernelConfigFileHtmlTableHandler=ZKernelConfig_HtmlTableHandler.ini
 ;Beispiel für ProgrammKonfiguration
 #Auslesen der Adresse aus dem Web
 ProgIPReader=HtmlTableHandler!02_IP-READER
+
+#Aliasname des JobSteps (statt Klassenname) = Section in der Ini-Datei
+HtmlTableWriterStep=HtmlTableWriter
 
 [HtmlTableHandler!02_IP-READER]
 ;Beispiel für eine Anweisung, dass sich der Wert in einer anderen Postion befindet.
