Reihenfolge der Tabellenspalten nun wirklich so wie in ini-Datei definiert
Signed-off-by: firak01 <firak01@t-online.de>

--- a/JAZLanguageMarkup/tryout/ZKernelConfig_HtmlTableHandler.ini
+++ b/JAZLanguageMarkup/tryout/ZKernelConfig_HtmlTableHandler.ini
@@ -98,7 +98,7 @@ InputFileNameXsl=pagHtmlTableTagGenerated4Debug.xsl
 OutputDirectoryPath=use\zKernel\html\step01\writer
 
 # Map: HeaderId = Label
-TableHeaderMap=<Z><JSON><JSON:MAP>{"IPNr":"IP-Adresse","Servername":"Name des Servers","IPPortListen":"Port für Listener","IPPortConnect":"Port für Verbindung","IPDate":"Datum","IPTime":"Zeit"}</JSON:MAP></JSON></Z>
+TableHeaderMap=<Z><JSON><JSON:MAP>{"ServerName":"Name des Servers","IPNr":"IP-Adresse","IPPortListen":"Port für Listener","IPPortConnect":"Port für Verbindung","IPDate":"Datum","IPTime":"Zeit"}</JSON:MAP></JSON></Z>
 
 #############################################################
 ### Fuer andere Systemnummmern, hier 02:
