JobSteps mit Output, aufeinander folgend
Signed-off-by: firak01 <firak01@t-online.de>

--- a/JAZLanguageMarkup/tryout/ZKernelConfig_HtmlTableHandler.ini
+++ b/JAZLanguageMarkup/tryout/ZKernelConfig_HtmlTableHandler.ini
@@ -52,6 +52,7 @@ ProgIPReader=HtmlTableHandler!01_IP-READER
 #Merke in dem Aliasnamen darf kein Unterstrich auftauchen, sonst wird der Teil hinter dem Unterstrick als Programname gesehen
 
 #Aliasname des JobSteps (statt Klassenname) = Section in der Ini-Datei
+HtmlTableColumnHeaderStep=HtmlTableColumnHeader
 HtmlTableWriterStep=HtmlTableWriter
 
 
@@ -90,15 +91,18 @@ URL2Read=<Z>[IP-ClientContext]URL2Read</Z>
 ;Hier als relativer Pfad eine gueltige URL...
 ;URL2Read=.\pagIPLinkFGL4DebugOnHANNIBALDEV04VM_local.html
 
+[HtmlTableColumnHeader];Section mit Daten für den Step, der die Spaltenueberschriften und die Reihenfolge der Spalten definiert
+
+# Map: HeaderId = Label
+TableHeaderMap=<Z><JSON><JSON:MAP>{"ServerName":"Name des Servers","IPNr":"IP-Adresse","IPPortListen":"Port für Listener","IPPortConnect":"Port für Verbindung","IPDate":"Datum","IPTime":"Zeit"}</JSON:MAP></JSON></Z>
+
+
 [HtmlTableWriter];Section mit Daten für den Writer Step
 InputDirectoryPath=use\zKernel\html\step01\writer
 InputFileNameXml=TableDataInput4Debug4XsdCreation.xml
 InputFileNameXsl=pagHtmlTableTagGenerated4Debug.xsl
 
 OutputDirectoryPath=use\zKernel\html\step01\writer
-
-# Map: HeaderId = Label
-TableHeaderMap=<Z><JSON><JSON:MAP>{"ServerName":"Name des Servers","IPNr":"IP-Adresse","IPPortListen":"Port für Listener","IPPortConnect":"Port für Verbindung","IPDate":"Datum","IPTime":"Zeit"}</JSON:MAP></JSON></Z>
 
 #############################################################
 ### Fuer andere Systemnummmern, hier 02:
@@ -124,6 +128,7 @@ KernelConfigFileHtmlTableHandler=ZKernelConfig_HtmlTableHandler.ini
 ProgIPReader=HtmlTableHandler!02_IP-READER
 
 #Aliasname des JobSteps (statt Klassenname) = Section in der Ini-Datei
+HtmlTableColumnHeaderStep=HtmlTableColumnHeader
 HtmlTableWriterStep=HtmlTableWriter
 
 [HtmlTableHandler!02_IP-READER]
